add new in button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
     <title>New Repo</title>
-    <p>this is new feature</p>
-    <p>this is new button</p>
+    <p>this is new button(new)</p>
 
     
